// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderingService preboot() render() renders "core" CDN url injected 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "http://foo.bar:1773",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {
        "theme:darkMode": Object {
          "userValue": true,
        },
      },
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page driven by settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {
        "theme:darkMode": Object {
          "userValue": true,
        },
      },
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page for blank basepath 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page for unauthenticated requests 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" page with global settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {
        "foo:bar": Object {
          "userValue": true,
        },
      },
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" with excluded global user settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders "core" with excluded user settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService preboot() render() renders feature flags overrides 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "http://foo.bar:1773",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" CDN url injected 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_build_flavor": "default",
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {
        "theme:darkMode": Object {
          "userValue": true,
        },
      },
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page driven by settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_build_flavor": "default",
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {
        "theme:darkMode": Object {
          "userValue": true,
        },
      },
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page for blank basepath 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_build_flavor": "default",
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page for unauthenticated requests 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {},
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" page with global settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_build_flavor": "default",
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {
        "foo:bar": Object {
          "userValue": true,
        },
      },
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" with excluded global user settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_build_flavor": "default",
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders "core" with excluded user settings 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_build_flavor": "default",
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {},
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;

exports[`RenderingService setup() render() renders feature flags overrides 1`] = `
Object {
  "anonymousStatusPage": false,
  "apmConfig": Object {
    "stubApmConfig": true,
  },
  "assetsHrefBase": "/mock-server-basepath",
  "basePath": "/mock-server-basepath",
  "branch": Any<String>,
  "buildNumber": Any<Number>,
  "clusterInfo": Object {
    "cluster_build_flavor": "default",
    "cluster_name": "cluster-name",
    "cluster_uuid": "cluster-uuid",
    "cluster_version": "8.0.0",
  },
  "csp": Object {
    "warnLegacyBrowsers": true,
  },
  "customBranding": Object {},
  "env": Object {
    "mode": Object {
      "dev": Any<Boolean>,
      "name": Any<String>,
      "prod": Any<Boolean>,
    },
    "packageInfo": Object {
      "branch": Any<String>,
      "buildDate": "2023-05-15T23:12:09.000Z",
      "buildFlavor": Any<String>,
      "buildNum": Any<Number>,
      "buildSha": Any<String>,
      "buildShaShort": "XXXXXX",
      "dist": Any<Boolean>,
      "version": Any<String>,
    },
  },
  "externalUrl": Object {
    "policy": Array [
      Object {
        "allow": true,
      },
    ],
  },
  "featureFlags": Object {
    "overrides": Object {
      "my-overridden-flag": 1234,
    },
  },
  "i18n": Object {
    "translationsUrl": "/mock-server-basepath/translations/MOCK_HASH/en.json",
  },
  "legacyMetadata": Object {
    "globalUiSettings": Object {
      "defaults": Object {},
      "user": Object {},
    },
    "uiSettings": Object {
      "defaults": Object {
        "registered": Object {
          "name": "title",
        },
      },
      "user": Object {},
    },
  },
  "logging": Any<Object>,
  "publicBaseUrl": "http://myhost.com/mock-server-basepath",
  "serverBasePath": "/mock-server-basepath",
  "theme": Object {
    "darkMode": "theme:darkMode",
    "name": "borealis",
    "stylesheetPaths": Object {
      "dark": Array [
        "/style-1.css",
        "/style-2.css",
      ],
      "default": Array [
        "/style-1.css",
        "/style-2.css",
      ],
    },
    "version": "v8",
  },
  "uiPlugins": Array [],
  "version": Any<String>,
}
`;
